all indivual pages added and bootstrap issues solved

--- a/atten/atten_manag_sys/templates/pages/student_detail.html
+++ b/atten/atten_manag_sys/templates/pages/student_detail.html
@@ -94,6 +94,10 @@
         </div>
         <hr>
         <div class="form-box">
+            <label for="maa">Full Address:</label>
+            <input id="maa" type="text" placeholder="Enter Full Address" required />
+        </div>
+        <div class="form-box">
             <label for="sibling">Sibling Full Name:</label>
             <input id="sibling" type="text" placeholder="Enter Name" />
         </div>
