--- a/atten/atten_manag_sys/templates/pages/dashboard.html
+++ b/atten/atten_manag_sys/templates/pages/dashboard.html
@@ -1,7 +1,84 @@
-{% include 'pages/navbar_ver.html' %}
+
+{% load static %}
 
 
-<h1>dashboard</h1>
+
+<!-- 
+<html>
+  <head>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript">
+      google.charts.load("current", {packages:["corechart"]});
+      google.charts.setOnLoadCallback(drawChart);
+      function drawChart() {
+        var data = google.visualization.arrayToDataTable([
+          ['attendance', ' in percentage'],
+           [overall, 52]
+        ]);
+
+        var options = {
+          
+          legend: 'none',
+          pieSliceText: 'label',
+          slices: { 0: {color: 'blue'},
+                    // 1: {offset: 'transparent'},
+                    
+          },
+        };
+
+        var chart = new google.visualization.PieChart(document.getElementById('piechart'));
+        chart.draw(data, options);
+      }
+    </script>
+  </head>
+  <body>
+  	<h1>dashboard</h1>
+  	{% include 'pages/navbar_ver.html' %}
+    <div id="piechart" style="width: 900px; height: 500px;"></div>
+  </body>
+</html>
+
+ -->
 
 
+
+ <html>
+  <head>
+   <!--  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript">
+      google.charts.load("current", {packages:["corechart"]});
+      google.charts.setOnLoadCallback(drawChart);
+      function drawChart() {
+        var data = google.visualization.arrayToDataTable([
+          ['Pac Man', 'Percentage'],
+          ['', 75],
+          ['', 25]
+        ]);
+
+        var options = {
+          legend: 'none',
+          pieSliceText: 'none',
+          pieStartAngle: 135,
+          tooltip: { trigger: 'none' },
+          slices: {
+            0: { color: 'blue' },
+            1: { color: 'transparent' }
+          }
+        };
+
+        var chart = new google.visualization.PieChart(document.getElementById('pacman'));
+        chart.draw(data, options);
+      }
+    </script> -->
+
+    
+
+
+
+  </head>
+  <body>
+  	{% include 'pages/navbar_ver.html' %}
+   <!--  <div id="pacman" style="width: 500px; height: 300px; align: right;"></div> -->
+  </body>
+</html>
 
