--- a/atten/atten_manag_sys/templates/pages/dashboard.html
+++ b/atten/atten_manag_sys/templates/pages/dashboard.html
@@ -1,84 +1,28 @@
 
 {% load static %}
-
-
-
-<!-- 
+<!DOCTYPE html>
 <html>
-  <head>
-    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script type="text/javascript">
-      google.charts.load("current", {packages:["corechart"]});
-      google.charts.setOnLoadCallback(drawChart);
-      function drawChart() {
-        var data = google.visualization.arrayToDataTable([
-          ['attendance', ' in percentage'],
-           [overall, 52]
-        ]);
+<head>
+	<title>Dashboard</title>
 
-        var options = {
-          
-          legend: 'none',
-          pieSliceText: 'label',
-          slices: { 0: {color: 'blue'},
-                    // 1: {offset: 'transparent'},
-                    
-          },
-        };
 
-        var chart = new google.visualization.PieChart(document.getElementById('piechart'));
-        chart.draw(data, options);
-      }
-    </script>
-  </head>
-  <body>
-  	<h1>dashboard</h1>
-  	{% include 'pages/navbar_ver.html' %}
-    <div id="piechart" style="width: 900px; height: 500px;"></div>
-  </body>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
+
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+</head>
+<body>
+
+	 
+
+	{% include 'pages/navbar_ver.html' %}
+
+
+</body>
 </html>
 
- -->
 
 
-
- <html>
-  <head>
-   <!--  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script type="text/javascript">
-      google.charts.load("current", {packages:["corechart"]});
-      google.charts.setOnLoadCallback(drawChart);
-      function drawChart() {
-        var data = google.visualization.arrayToDataTable([
-          ['Pac Man', 'Percentage'],
-          ['', 75],
-          ['', 25]
-        ]);
-
-        var options = {
-          legend: 'none',
-          pieSliceText: 'none',
-          pieStartAngle: 135,
-          tooltip: { trigger: 'none' },
-          slices: {
-            0: { color: 'blue' },
-            1: { color: 'transparent' }
-          }
-        };
-
-        var chart = new google.visualization.PieChart(document.getElementById('pacman'));
-        chart.draw(data, options);
-      }
-    </script> -->
-
-    
-
-
-
-  </head>
-  <body>
-  	{% include 'pages/navbar_ver.html' %}
-   <!--  <div id="pacman" style="width: 500px; height: 300px; align: right;"></div> -->
-  </body>
-</html>
 
