--- a/atten/atten_manag_sys/templates/pages/navbar_ver.html
+++ b/atten/atten_manag_sys/templates/pages/navbar_ver.html
@@ -1,3 +1,7 @@
+{% load static %}
+
+
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -11,33 +15,167 @@ ul {
   margin: 0;
   padding: 0;
   width: 20%;
-  background-color: #f1f1f1;
+  /*background-color: #f1f1f1;*/
   position: fixed;
   height: 100%;
   overflow: auto;
 }
 
-li a.b {
+/*li a.b {
   display: block;
   color: #000;
   padding: 8px 16px;
   text-decoration: none;
-}
+}*/
 
-li a.active {
+/*li a.active {
   background-color: #353535;
   color: white;
-}
-
+}*/
+/*
 li a.b:hover:not(.active) {
   background-color: #34495e;
-  color: white;
+  color: white;*/
 }
 </style>
-</head>
-<body>
+<script src="https://kit.fontawesome.com/31da4c6133.js" crossorigin="anonymous"></script>
 
-<ul>
+<link href="{% static 'css/sb-admin.css' %}" rel="stylesheet">
+
+
+</head>
+<body id="page-top">
+
+
+  <nav class="navbar navbar-expand navbar-dark bg-dark static-top">
+
+      <a class="navbar-brand mr-1" href="{% url 'dashboard' %}">AMS Dashboard</a>
+
+      <button class="btn btn-link btn-sm text-white order-1 order-sm-0" id="sidebarToggle" href="#">
+        <i class="fas fa-bars"></i>
+      </button>
+
+      <form class="d-none d-md-inline-block form-inline ml-auto mr-0 mr-md-3 my-2 my-md-0">
+        <div class="input-group">
+          <input type="text" class="form-control" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2">
+          <div class="input-group-append">
+            <button class="btn btn-primary" type="button">
+              <i class="fas fa-search"></i>
+            </button>
+          </div>
+        </div>
+      </form>
+
+
+
+
+      <!-- <ul class="navbar-nav ml-auto ml-md-0">
+        <li class="nav-item dropdown no-arrow mx-1">
+          <a class="nav-link dropdown-toggle" href="#" id="alertsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="fas fa-bell fa-fw"></i>
+            <span class="badge badge-danger">9+</span>
+          </a>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="alertsDropdown">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </li>
+        <li class="nav-item dropdown no-arrow mx-1">
+          <a class="nav-link dropdown-toggle" href="#" id="messagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="fas fa-envelope fa-fw"></i>
+            <span class="badge badge-danger">7</span>
+          </a>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="messagesDropdown">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </li>
+        <li class="nav-item dropdown no-arrow">
+          <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="fas fa-user-circle fa-fw"></i>
+          </a>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
+            <a class="dropdown-item" href="#">Settings</a>
+            <a class="dropdown-item" href="#">Activity Log</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">Logout</a>
+          </div>
+        </li>
+      </ul> -->
+
+    </nav>
+
+
+    <!-- Sidebar -->
+      <ul class="sidebar navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="{% url 'dashboard'%}">
+            <i class="fas fa-fw fa-tachometer-alt"></i>
+            <span>Dashboard</span>
+          </a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="fas fa-fw fa-folder"></i>
+            <span>Student Details</span>
+          </a>
+          <div class="dropdown-menu" aria-labelledby="pagesDropdown">
+            <a class="dropdown-item" href="{% url 'student-detail' %}">Student Details</a>
+            <a class="dropdown-item" href="{% url 'communicational' %}">Communication Details</a>
+            <a class="dropdown-item" href="{% url 'education' %}">Educational Details</a>
+           
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">
+            <i class="fas fa-fw fa-folder"></i>
+            <span>page</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">
+            <i class="fas fa-fw fa-folder"></i>
+            <span>PAGE</span></a>
+        </li>
+
+
+      </ul>
+      <!-- Breadcrumbs-->
+         <!--  <ol class="breadcrumb">
+            <li class="breadcrumb-item">
+              <a href="#">Dashboard</a>
+            </li>
+            <li class="breadcrumb-item active">Overview</li>
+          </ol> -->
+
+
+           <!-- Scroll to Top Button-->
+    <a class="scroll-to-top rounded" href="#page-top">
+      <i class="fas fa-angle-up"></i>
+    </a>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <ul>
   <li><a class="active b" href="{% url 'dashboard'%}">Dashboard</a></li>
   <li><a class="b" href="{% url 'student-detail' %}">Student Details</a></li>
   <li><a class="b" href="{% url 'communicational' %}">Student Communication Details</a></li>
@@ -55,7 +193,7 @@ li a.b:hover:not(.active) {
 
 </ul>
 
-
+ -->
 
 </body>
 </html>
