--- a/atten/atten_manag_sys/templates/pages/stu_login.html
+++ b/atten/atten_manag_sys/templates/pages/stu_login.html
@@ -8,7 +8,7 @@
     <title>َ Login Form</title>
     <!--font awesome -->
 	<script src="https://kit.fontawesome.com/31da4c6133.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="{% static 'style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
   </head>
   <body>
 
@@ -31,7 +31,7 @@
 
  </div>
  <div class="a ">
- 	<a href="#">Student Login</a>
+ 	<a href="{% url 'employee-login' %}">Employee Login</a>
  </div>
   
 </form>
