--- a/atten/atten_manag_sys/templates/pages/navbar_ver.html
+++ b/atten/atten_manag_sys/templates/pages/navbar_ver.html
@@ -138,7 +138,7 @@ li a.b:hover:not(.active) {
         <li class="nav-item">
           <a class="nav-link" href="#">
             <i class="fas fa-fw fa-folder"></i>
-            <span>PAGE</span></a>
+            <span>Log Out</span></a>
         </li>
 
 
