all unecessary interlinking of pages removed

--- a/atten/atten_manag_sys/templates/pages/communicational.html
+++ b/atten/atten_manag_sys/templates/pages/communicational.html
@@ -53,13 +53,13 @@
 
        
         <hr>
-        <div class="form-box">
+        <div class="form-box a">
             <label for="add">Emergency Contact Person Number </label>
             <input id="add" type="text" placeholder="Enter Number" required />
         </div>
-         <div class="form-submit" class="form-box">
+        <!--  <div class="form-submit" class="form-box">
             <input type="submit" class="btn btn-success" value="Submit Details" />
-        </div>
+        </div> -->
         
     </form>
 </div>
