--- a/atten/static/css/stu_detail.css
+++ b/atten/static/css/stu_detail.css
@@ -28,9 +28,11 @@ input{
    /* padding-top: 50px;*/
    background-color: #34495e;
    padding-top: 0px;
+   padding-bottom: 50px;
 
 }
 .form-box{
+
     background-color: #353535;
 }
 
@@ -48,6 +50,7 @@ input{
 
 .form-container .form-wrap .form-box {
     margin: 0px 0px 15px;
+
 }
 
 .form-container .form-wrap .form-box input[type="text"]{
@@ -55,6 +58,7 @@ input{
     border-radius: 3px;
     border: 1px solid #353535;
     width: 30%;
+
 }
 
 .form-container .form-wrap .form-submit {
@@ -84,7 +88,7 @@ input{
     border:1px solid #daf1ff;
 }
 div{
-    padding-top: 5px;
+    padding-bottom: 5px;
     text-align: center;
     padding-left: 10px;
     padding-right: 10px;
@@ -94,3 +98,6 @@ h1{
     background-color: #353535;
     padding-bottom: 60px;
 }
+/*.a{
+    padding-bottom: 50px;
+}*/
