--- a/atten/atten_manag_sys/templates/pages/navbar_ver.html
+++ b/atten/atten_manag_sys/templates/pages/navbar_ver.html
@@ -21,6 +21,12 @@ ul {
   overflow: auto;
 }
 
+.hello-msg{
+  font-size: 18px;
+  color: #fff;
+  margin-right: 5px;
+}
+
 /*li a.b {
   display: block;
   color: #000;
@@ -47,7 +53,7 @@ li a.b:hover:not(.active) {
 <body id="page-top">
 
 
-  <nav class="navbar navbar-expand navbar-dark bg-dark static-top">
+  <nav class="navbar navbar-expand navbar-dark bg-dark fixed-top">
 
       <a class="navbar-brand mr-1" href="{% url 'dashboard' %}">AMS Dashboard</a>
 
@@ -64,6 +70,10 @@ li a.b:hover:not(.active) {
             </button>
           </div>
         </div>
+
+
+        <span class ="hello-msg">Hello,{{request.user}}</span>
+        <span> <a class ="hello-msg" href="{% url 'logout'%}">Logout</a> </span>
       </form>
 
 
@@ -138,7 +148,7 @@ li a.b:hover:not(.active) {
         <li class="nav-item">
           <a class="nav-link" href="#">
             <i class="fas fa-fw fa-folder"></i>
-            <span>Log Out</span></a>
+            <span>page</span></a>
         </li>
 
 
