--- a/atten/atten_manag_sys/templates/pages/student_detail.html
+++ b/atten/atten_manag_sys/templates/pages/student_detail.html
@@ -40,82 +40,99 @@
 
  {% include 'pages/navbar_ver.html' %}
 <div class="form-container">
+    {% for i in stu_details %}
 
 
 
     <form action="#" method="POST" class="form-wrap">
         <h1>Student Detail's Panel</h1>
         <div class="form-box">
+            <label for="f-name"> University roll no:</label>
+            <input id="f-name" type="text" value="{{i.university_roll_num}}
+" placeholder="Enter First Name" required />
+        </div>
+        <div class="form-box">
             <label for="f-name"> First Name:</label>
-            <input id="f-name" type="text" placeholder="Enter First Name" required />
+            <input id="f-name" type="text" value="{{i.first_name}}" placeholder="Enter First Name" required />
         </div>
         <div class="form-box">
             <label for="l-name"> Last Name:</label>
-            <input id="l-name" type="text" placeholder="Enter Last Name" required />
+            <input id="l-name" type="text"  value="{{i.last_name}}" placeholder="Enter Last Name" required />
         </div>
         <div class="form-box">
             <label for="e-mail">Personal Email Address:</label>
-            <input id="e-mail" type="text" placeholder="Enter personal Email" required />
+            <input id="e-mail" type="text"  value="{{i.personal_email}}" placeholder="Enter personal Email" required />
         </div>
         <div class="form-box">
             <label for="oe-mail"> Official Email Address:</label>
-            <input id="oe-mail" type="text" placeholder="Enter official Email" />
+            <input id="oe-mail" type="text" value="{{i.official_mail}}" placeholder="Enter official Email" />
         </div>
         <div class="form-box">
             <label for="no">Phone Number:</label>
-            <input id="no" type="text" placeholder="Enter Phone Number" required />
+            <input id="no" type="text" value="{{i.phone_num}}" placeholder="Enter Phone Number" required />
         </div>
 
         <div class="form-box">
             <label for="add">Aadhaar Numer:</label>
-            <input id="add" type="text" placeholder="Enter Aadhaar Number" required />
+            <input id="add" type="text" value="{{i.aadhar_num}}" placeholder="Enter Aadhaar Number" required />
         </div>
         <hr>
         <div class="form-box">
             <label for="father">Father's Full Name:</label>
-            <input id="father" type="text" placeholder="Enter Name" required />
+            <input id="father" type="text" value="{{i.father_name}}" placeholder="Enter Name" required />
         </div>
         <div class="form-box">
 
             <label for="father-mail">Official Email Address:</label>
-            <input id="father-mail" type="text" placeholder="Enter official Email Address" />
+            <input id="father-mail" type="text" value="{{i.father_official_mail}}" placeholder="Enter official Email Address" />
 
              
         </div>
         <hr>
         <div class="form-box">
             <label for="maa">Mother's Full Name:</label>
-            <input id="maa" type="text" placeholder="Enter Name" required />
+            <input id="maa" type="text" value="{{i.mother_name}}" placeholder="Enter Name" required />
         </div>
         <div class="form-box">
 
             <label for="mother-mail">Official Email Address:</label>
-            <input id="mother-mail" type="text" placeholder="Enter official Email Address" />
+            <input id="mother-mail" type="text" value="{{i.mother_official_mail}}" placeholder="Enter official Email Address" />
         </div>
         <hr>
         <div class="form-box">
             <label for="maa">Full Address:</label>
-            <input id="maa" type="text" placeholder="Enter Full Address" required />
+            <input id="maa" type="text" value="{{i.address}}" placeholder="Enter Full Address" required />
         </div>
         <div class="form-box">
             <label for="sibling">Sibling Full Name:</label>
-            <input id="sibling" type="text" placeholder="Enter Name" />
+            <input id="sibling" type="text" value="{{i.sibling_name}}" placeholder="Enter Name" />
         </div>
         <div class="form-box">
             <label for="sibling-mail"> Official Email:</label>
-            <input id="sibling-mail" type="text" placeholder="Enter official Email" />
+            <input id="sibling-mail" type="text" value="{{i.sibling_mail}}" placeholder="Enter official Email" />
         </div>
         <div class="form-box">
             <label for="sibling_no">Sibling's Contact Number:</label>
-            <input id="sibling_no" type="text" placeholder="Enter Phone Number"  />
+            <input id="sibling_no" type="text" value="{{i.sibling_num}}" placeholder="Enter Phone Number"  />
         </div>
 
-        <div class="form-submit" >
+        <!-- <div class="form-submit" >
             <input type="submit" class="btn btn-success" value="Submit Details" />
-        </div>
+        </div> -->
         
     </form>
+    {%endfor%}
 </div>
+
+
+
+
+
+
+
+
+
+
 
 </body>
 </html>	
