--- a/atten/static/css/educational.css
+++ b/atten/static/css/educational.css
@@ -14,14 +14,14 @@ body {
 
 .form-container {
     display: flex;
-    width: 100%;
+    width: 30%;
     justify-content: center;
     align-items: center;
     padding-top: 50px
 }
 
 .form-container .form-wrap {
-    background: #fff;
+    background: #34495e;
     width: 100%;
     padding: 15px 20px;
 }
@@ -44,7 +44,7 @@ body {
 }
 
 .form-container .form-wrap .form-submit {
-    display: flex;
+    /*display: flex;*/
     justify-content: center;
 }
 
